force-app/main/default/objects/Trivia_Question__c/Trivia_Question__c.object-meta.xml
<CustomObject>
    <label>Trivia Question</label>
    <nameField>
        <displayFormat>TQ-{0000}</displayFormat>
        <label>Trivia Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trivia Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>