force-app/main/default/objects/Trivia_Question__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <label>Answer Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>