force-app/main/default/objects/Trivia_Question__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <label>Display Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>