force-app/main/default/objects/Trivia_Question__c/fields/Trivia__c.field-meta.xml
<CustomField>
    <fullName>Trivia__c</fullName>
    <label>Trivia</label>
    <referenceTo>Trivia__c</referenceTo>
    <relationshipLabel>Trivia Questions</relationshipLabel>
    <relationshipName>Trivia_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>