force-app/main/default/objects/Trivia_Question__c/fields/Trivia_Category__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Category__c</fullName>
    <label>Trivia Category</label>
    <referenceTo>Trivia_Category__c</referenceTo>
    <relationshipLabel>Trivia Questions</relationshipLabel>
    <relationshipName>Trivia_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>