force-app/main/default/objects/Trivia_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Display_Value__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Answer_Text__c</columns>
    <columns>Trivia__c</columns>
    <columns>Trivia_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>